macros/tests/entry/fail/duplicate.stderr
error: Duplicate attribute `log`
 --> tests/entry/fail/duplicate.rs:4:14
  |
4 | #[entry(log, log, crate("nuefi"), crate("dup"))]
  |              ^^^

error: Duplicate attribute `crate`
 --> tests/entry/fail/duplicate.rs:4:35
  |
4 | #[entry(log, log, crate("nuefi"), crate("dup"))]
  |                                   ^^^^^^^^^^^^
